# HouseInsight_Agent

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  start.bat  start.sh
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  PlotlyFigure.tsx  api.ts  styles.css
scripts/: generate_sample_house_data.py
server/: __init__.py  main.py
server/agent/: __init__.py  house_agent.py
server/api/: __init__.py  deps.py  routes.py  ws.py
server/core/: __init__.py  config.py  house_schema.py  paths.py  session_store.py
server/pipeline/: __init__.py  listing_etl.py  rule_feature_engineering.py
server/tools/: __init__.py  analysis.py  analysis_narrative.py  analysis_plain_summary.py  analysis_plan.py  chat_listing_query.py  cleaning.py  cleaning_housing.py  composite_field_parse.py  data_quality.py  dataset_profile.py  description_enrich.py  export.py  io.py  listing_numeric_parse.py  registry.py  text_label_features.py  viz.py
templates/: report_template.html
tests/: test_analysis.py  test_analysis_plain_summary.py  test_analysis_plan.py  test_chat_listing_query.py  test_cleaning.py  test_cleaning_dedup.py  test_cleaning_housing.py  test_composite_field_parse.py  test_data_quality.py  test_health.py  test_io_load_partial.py  test_listing_etl.py  test_listing_numeric_parse.py  test_pipeline_executor.py  test_rule_feature_engineering.py  test_text_label_features.py  test_viz_horizontal_labels.py
